<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Health Commodity Tracer</string>
    <string name="authority" translatable="false">com.softmed.stock_app</string>
    <string name="title_activity_detail">Product Details</string>
    <string name="title_action_bar_add_product">Add Product</string>
    <string name="title_action_bar_edit_product">Edit Product</string>
    <string name="title_action_create_order">Create Order</string>
    <string name="title_action_empty_products">Empty Products</string>
    <string name="title_action_report_Product_stock">Report Product Stock</string>
    <string name="title_action_delete">Delete</string>
    <string name="title_action_done">Done</string>
    <string name="title_action_edit">Edit</string>
    <string name="title_dialog_product_photo">Select product photo</string>
    <string name="title_dialog_confirm_empty_products">Empty products?</string>
    <string name="title_dialog_confirm_sale">Track a sale?</string>
    <string name="title_dialog_confirm_delete">Delete this product?</string>
    <string name="message_dialog_confirm_empty_products">This will permanently delete all products in the database.</string>
    <string name="message_dialog_confirm_sale">This will decrease the available quantity of this product by 1.</string>
    <string name="message_dialog_confirm_delete">This will permanently delete this product from the database.</string>
    <string name="email_subject_order_request">Order Request for Product: <xliff xliff:id="product_name">%s</xliff></string>
    <string name="error_msg_product_name_empty">Please enter the product name.</string>
    <string name="error_msg_product_supplier_empty">Please enter the product supplier.</string>
    <string name="error_msg_product_type_empty">Please select the product type.</string>
    <string name="error_msg_product_supplier_email_empty">Please enter the product supplier email address.</string>
    <string name="error_msg_product_price_empty">Please enter the number of clients on Regime.</string>
    <string name="error_msg_product_quantity_empty">Please enter the quantity of stock on hand.</string>
    <string name="string_format_product_price">Tsh </string>
    <string name="string_format_product_quantity">Stock on Hand: </string>
    <string name="string_format_product_code">Product code: </string>
    <string name="string_format_product_supplier">Product supplier: </string>
    <string name="string_format_product_clients_on_regime">Clients on Regime : </string>
    <string name="string_format_product_quantity_details">Product Stock on hand </string>
    <string name="image_button_cd_overflow">Overflow button</string>
    <string name="image_view_cd_product_photo">Product Photo</string>
    <string name="edit_text_hint_product_name">Product Name</string>
    <string name="edit_text_hint_product_code">Product Code</string>
    <string name="edit_text_hint_product_supplier">Product Supplier</string>
    <string name="edit_text_hint_product_supplier_email">Product Supplier Email</string>
    <string name="edit_text_number_of_clients_on_regime">Number of Clients on Regime </string>
    <string name="edit_text_wastage">Wastage </string>
    <string name="edit_text_quantity_expired">Quantity expired </string>
    <string name="edit_text_hint_stock_on_hand">Product Stock on hand</string>
    <string name="text_view_empty">No products found</string>
    <string name="button_increase_qty"><xliff xliff:id="plus">+</xliff> qty</string>
    <string name="button_decrease_qty"><xliff xliff:id="minus">-</xliff> qty</string>
    <string name="button_contact_supplier">Contact Supplier</string>
    <string-array name="product_photo_dialog_options">
        <item>Take photo</item>
        <item>Choose photo</item>
    </string-array>
    <string name="loading_categories">Loading Categories…</string>
    <string name="loading_schedule">Loading Schedule…</string>
    <string name="error_loading_categories">Error : Loading Categories…</string>
    <string name="loading_sub_categories">Loading Sub categories…</string>
    <string name="loading_products">Loading Products…</string>
    <string name="error_loading_products">Error: Loading Products…</string>
    <string name="error_loading_posting_frequencies">Error: Loading Posting Frequencies…</string>
    <string name="loading_units">Loading Units…</string>
    <string name="loading_transactions">Loading Transactions…</string>
    <string name="loading_users">Loading Users…</string>
    <string name="error_loading_transactions">Error: Loading Transactions…</string>
    <string name="loading_locations">Loading Locations ...</string>
    <string name="error_loading_locations">Error: Loading Locations ...</string>
    <string name="loading_data">Loading Data…</string>
    <string name="loging_in">Loging In…</string>
    <string name="success">Success</string>
    <string name="username_required">Please fill the username</string>
    <string name="password_required">Please fill the password</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type contact name or facility name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="permission_external_storage">External Storage permissions are needed.</string>
    <string name="title_activity_create_order">CreateOrderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="error_logging_in">Error loging in</string>
    <string name="login">Login</string>
    <string name="device_registration_warning">
        Device may have not registered\n
        You might miss important Notifications
    </string>
    <string name="enter_username_and_password">Enter username and password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="change_facility">Change Facility</string>
    <string name="change_password">Change Password</string>
    <string name="map_products">Map Products</string>
    <string name="clients_label"> Clients</string>
    <string name="title_activity_managed_products">ManagedProductsActivity</string>
</resources>