<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/product_photo_container"
            style="@style/ProductPhotoContainer"
            android:onClick="viewProductPhoto">

            <ImageView
                android:id="@+id/product_photo_image_view"
                style="@style/ProductPhotoImageView"
                android:contentDescription="@string/image_view_cd_product_photo"/>

        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="32dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/product_name_text_input_layout"
                    style="@style/ProductDetailsTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText"
                        android:hint="@string/edit_text_hint_product_name"
                        android:inputType="text|textCapSentences"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/product_code_text_input_layout"
                    style="@style/ProductDetailsTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText"
                        android:hint="@string/edit_text_hint_product_code"
                        android:inputType="text|textCapCharacters"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/product_supplier_text_input_layout"
                    style="@style/ProductDetailsTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText"
                        android:hint="@string/edit_text_hint_product_supplier"
                        android:inputType="text|textCapWords"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/product_supplier_email_text_input_layout"
                    style="@style/ProductDetailsTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText"
                        android:hint="@string/edit_text_hint_product_supplier_email"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/product_price_text_input_layout"
                    style="@style/ProductDetailsTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText"
                        android:hint="@string/edit_text_hint_product_price"
                        android:inputType="numberDecimal"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/product_quantity_text_input_layout"
                    style="@style/ProductDetailsTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText.ProductQuantity"
                        android:hint="@string/edit_text_hint_product_quantity"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="showProductPhotoDialog"
        android:src="@drawable/ic_photo_camera"
        app:fabSize="normal"
        app:layout_anchor="@id/product_photo_container"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>