<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app_ms="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softmed.stockapp.Activities.AddProductActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/app_bar_layout">
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/primary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:focusableInTouchMode="true"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/product_photo_container"
            style="@style/ProductPhotoContainer"
            android:onClick="viewProductPhoto">

            <ImageView
                android:id="@+id/product_photo_image_view"
                style="@style/ProductPhotoImageView"/>

        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:text="Product Info"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/card_separator" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spin_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:divider="@null"
                    android:textSize="14sp"
                    app_ms:ms_hintTextSize="14sp"
                    app_ms:ms_alwaysShowFloatingLabel="true"
                    app_ms:ms_multiline="false"
                    app_ms:ms_hint="Item Category"
                    app_ms:ms_enableFloatingLabel="true"
                    app_ms:ms_enableErrorLabel="false"
                    app_ms:ms_floatingLabelText="Category"
                    app_ms:ms_baseColor="@color/card_grid_tex"
                    app_ms:ms_highlightColor="@color/card_grid_text"
                    app_ms:ms_errorColor="@color/red_500"
                    app_ms:ms_hintColor="#b3b3b3"
                    app_ms:ms_arrowColor="@color/black"
                    app_ms:ms_arrowSize="12dp"
                    app_ms:ms_alignLabels="false"
                    app_ms:ms_floatingLabelColor="@color/white"/>
                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/sub_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:divider="@null"
                    android:textSize="14sp"
                    app_ms:ms_hintTextSize="14sp"
                    app_ms:ms_alwaysShowFloatingLabel="true"
                    app_ms:ms_multiline="false"
                    app_ms:ms_hint="Item Sub Category"
                    app_ms:ms_enableFloatingLabel="true"
                    app_ms:ms_enableErrorLabel="false"
                    app_ms:ms_floatingLabelText="Category"
                    app_ms:ms_highlightColor="@color/card_grid_text"
                    app_ms:ms_errorColor="@color/red_500"
                    app_ms:ms_hintColor="#b3b3b3"
                    app_ms:ms_arrowColor="@color/black"
                    app_ms:ms_arrowSize="12dp"
                    app_ms:ms_alignLabels="false"
                    app_ms:ms_floatingLabelColor="@color/white"/>
                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/products_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:divider="@null"
                    android:textSize="14sp"
                    app_ms:ms_hintTextSize="14sp"
                    app_ms:ms_alwaysShowFloatingLabel="true"
                    app_ms:ms_multiline="false"
                    app_ms:ms_hint="Sub Category Types"
                    app_ms:ms_enableFloatingLabel="true"
                    app_ms:ms_enableErrorLabel="false"
                    app_ms:ms_floatingLabelText="Category"
                    app_ms:ms_highlightColor="@color/card_grid_text"
                    app_ms:ms_errorColor="@color/red_500"
                    app_ms:ms_hintColor="#b3b3b3"
                    app_ms:ms_arrowColor="@color/black"
                    app_ms:ms_arrowSize="12dp"
                    app_ms:ms_alignLabels="false"
                    app_ms:ms_floatingLabelColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:text="Product Description"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />


                <TextView
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:id="@+id/product_description"
                    style="@style/ProductDetailsTextInputEditText"
                    android:editable="false"
                    android:hint="Product Description"
                    android:inputType="text|textCapCharacters" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/product_name_text_input_layout"
                    android:visibility="gone"
                    style="@style/ProductDetailsTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText"
                        android:hint="@string/edit_text_hint_product_name"
                        android:inputType="text|textCapSentences"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="16dp"
                    android:hint="@string/edit_text_hint_stock_on_hand"
                    android:id="@+id/product_stock_on_hand_input_layout"
                    style="@style/ProductDetailsTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText.ProductQuantity"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/clients_on_regime_input_layout"
                    style="@style/ProductDetailsTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ProductDetailsTextInputEditText"
                        android:hint="@string/edit_text_number_of_clients_on_regime"
                        android:inputType="numberDecimal"/>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="showProductPhotoDialog"
        android:src="@drawable/ic_photo_camera"
        app:fabSize="normal"
        app:layout_anchor="@id/product_photo_container"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>